--- a/src/WebApp/Pages/Notesheets/Edit.cshtml
+++ b/src/WebApp/Pages/Notesheets/Edit.cshtml
@@ -148,7 +148,8 @@
         function displayChanges() {
             showHide();
             showHideGemNonAvailCert();
-            showTypeOfBidding();
+            //showTypeOfBidding();
+            getBiddingType();
         }
         function showHide() {
             var travelhistory = document.getElementById('Notesheet_ModeOfTerm')
@@ -188,6 +189,30 @@
                 document.getElementById('types_of_bidding_preferred').style.display = 'block';
 
             }
+        }
+        function getBiddingType() {
+            var x = document.getElementById("Notesheet_ModeOfTerm").value;
+            var bidding_types;
+            if (x == "GeM PAC bidding") {
+                bidding_types = ["Single Stage Two Envelope", "Single Stage Single Envelope"];
+            }
+            else if (x == "Open Tender (Paper based)" || x == "CPP Portal Open Tender" || x == "CPP Portal Open LTE" || x == "CPP Portal LTE") {
+                bidding_types = ["Single Stage Two Envelope", "Two Stage", "QCBS", "Enlistment"];
+            }
+            else if (x == "Limited Tender (Paper based)" || x == "Market Survey through Spot enquiry") {
+                bidding_types = ["Single Stage Single Envelope"];
+            }
+            else if (x == "GeM Bidding" || x == "GeM BOQ based bidding") {
+                bidding_types = ["Single Stage Two Envelope"];
+            }
+            else {
+                bidding_types = []
+            }
+            var str = ""
+            for (var item of bidding_types) {
+                str += "<option>" + item + "</option>"
+            }
+            document.getElementById("Notesheet_TypeOfBidding").innerHTML = str;
         }
     </script>
 }
