--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -52,6 +52,28 @@
                 <input asp-for="Notesheet.EstimatedCost" class="form-control" />
                 <span asp-validation-for="Notesheet.EstimatedCost" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Notesheet.BudgetOfferReference" class="control-label">Budgetary Offer Reference No.</label>
+                <input asp-for="Notesheet.EstimatedCost" class="form-control" />
+                <span asp-validation-for="Notesheet.EstimatedCost" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Notesheet.BudgetOfferDate" class="control-label">Budgetary Offer Date</label>
+                <input type="date" asp-for="Notesheet.BudgetOfferDate" class="form-control" />
+                <span asp-validation-for="Notesheet.BudgetOfferDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Notesheet.BudgetOfferValidity" class="control-label">Budgetary Offer Validity</label>
+                <input asp-for="Notesheet.BudgetOfferValidity" class="form-control" />
+                <span asp-validation-for="Notesheet.BudgetOfferValidity" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Notesheet.BudgetOfferAddress" class="control-label">Budgetary Offer Address</label>
+                <input asp-for="Notesheet.BudgetOfferAddress" class="form-control" />
+                <span asp-validation-for="Notesheet.BudgetOfferAddress" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Notesheet.BillOfQuantity" class="control-label">Bill of Quantities without Price</label>
                 <input asp-for="Notesheet.BillOfQuantity" class="form-control" />
