--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -60,67 +60,91 @@
             @Html.DisplayFor(model => model.Notesheet.EstimatedCost)
         </dd>
         <dt class="col-sm-12">
-            7.Bill of Quantities without Price:
+            7.Budgetary Offer Reference No.:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BudgetOfferReference)
+        </dd>
+        <dt class="col-sm-12">
+            8.Budgetary Offer Date:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BudgetOfferDate)
+        </dd>
+        <dt class="col-sm-12">
+            9.Budgetary Offer Validity:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BudgetOfferValidity)
+        </dd>
+        <dt class="col-sm-12">
+            10.Budgetary Offer Address:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BudgetOfferAddress)
+        </dd>
+        <dt class="col-sm-12">
+            11.Bill of Quantities without Price:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.BillOfQuantity)
         </dd>
         <dt class="col-sm-12">
-            8.Guarantee/Warranty:
+            12.Guarantee/Warranty:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.Guarantee_Warranty)
         </dd>
         <dt class="col-sm-12">
-            9.Payment terms & CPG:
+            13.Payment terms & CPG:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.Payment_Terms_CPG)
         </dd>
         <dt class="col-sm-12">
-            10.Mode of Tender preferred:
+            14.Mode of Tender preferred:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.ModeOfTerm)
         </dd>
         <dt class="col-sm-12">
-            11.Type of Bidding process preferred:
+            15.Type of Bidding process preferred:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.TypeOfBidding)
         </dd>
         <dt class="col-sm-12">
-            12.List Of Parties:
+            16.List Of Parties:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.ListOfParties)
         </dd>
         <dt class="col-sm-12">
-            13.GeM Non-Availability Certificate:
+            17.GeM Non-Availability Certificate:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.GeMNonAvailabilityCertificate)
         </dd>
         <dt class="col-sm-12">
-            14.Work Completion Schedule/Delivery time schedule:
+            18.Work Completion Schedule/Delivery time schedule:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.WorkCompletionSchedule)
         </dd>
         <dt class="col-sm-12">
-            15.Special Conditions of Contract:
+            19.Special Conditions of Contract:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.SpecialConditionsOfContract)
         </dd>
         <dt class="col-sm-12">
-            16.Budget Provision:
+            20.Budget Provision:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.BudgetProvision)
         </dd>
         <dt class="col-sm-12">
-            17.Proposal for which Approval sought:
+            21.Proposal for which Approval sought:
         </dt>
         <dd class="col-sm-12">
 
@@ -131,7 +155,7 @@
             }
         </dd>
         <dt class="col-sm-12">
-            18.DOP Clause No. and Section:
+            22.DOP Clause No. and Section:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.DopClause)
@@ -139,7 +163,7 @@
         @*@String.Join(",", Model.Notesheet.ProposalForApprovals)*@
 
         <dt class="col-sm-12">
-            19.Competent Authority for granting approval:
+            23.Competent Authority for granting approval:
         </dt>
         <dd class="col-sm-12">
             @Html.DisplayFor(model => model.Notesheet.ApprovingAuthority)
