--- a/src/WebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/WebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,51 +1,65 @@
 ﻿@page
 @model LoginModel
+@addTagHelper *, DNTCaptcha.Core
 
-@{
-    ViewData["Title"] = "Log in";
-}
 
 <div class="row justify-content-center align-items-center">
-    <div class="col col-md-8 col-lg-6 col-xl-4">
-        <div class="p-5">
-            <div class="text-center">
-                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-            </div>
-            <form class="user" id="account" method="post">
+    <div class="col col-md-4 col-lg-4 col-xl-3">
+        <section>
+            <form id="account" method="post">
+
+                <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <input class="form-control form-control-user" asp-for="Input.Username" placeholder="Enter Email or Username...">
+                    <label asp-for="Input.Username"></label>
+                    <input asp-for="Input.Username" class="form-control" />
                     <span asp-validation-for="Input.Username" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input asp-for="Input.Password" class="form-control form-control-user" placeholder="Password">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" asp-for="Input.RememberMe">
-                        <label class="custom-control-label" asp-for="Input.RememberMe">Remember Me</label>
+                    <dnt-captcha asp-captcha-generator-max="99999"
+                                 asp-captcha-generator-min="11111"
+                                 asp-captcha-generator-language="English"
+                                 asp-captcha-generator-display-mode="ShowDigits"
+                                 asp-use-relative-urls="true"
+                                 asp-placeholder="Security code as a number"
+                                 asp-validation-error-message="Please enter the security code as a number."
+                                 asp-font-name="Tahoma"
+                                 asp-font-size="60"
+                                 asp-fore-color="#333333"
+                                 asp-back-color="#ccc"
+                                 asp-text-box-class="text-box form-control"
+                                 asp-text-box-template="<div class='input-group'><span class='input-group-prepend'><span class='input-group-text'><i class='fas fa-lock'></i></span></span>{0}</div>"
+                                 asp-validation-message-class="text-danger"
+                                 asp-refresh-button-class="fas fa-redo btn-sm"
+                                 asp-use-noise="false" />
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label asp-for="Input.RememberMe">
+                            <input asp-for="Input.RememberMe" />
+                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+                        </label>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-user btn-block">
-                    Login
-                </button>
-            </form>
-
-            <hr />
-            <div class="text-center">
-                <a class="small" id="forgot-password" asp-page="./ForgotPassword">Forgot Password?</a>
-            </div>
-            @*<div class="text-center">
-                    <a class="small" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
-                <div class="text-center">
-                    <button type="submit" asp-page-handler="SendVerificationEmail" class="small btn-link" style="padding:0px;margin:0px;border:0px">Resend email confirmation</button>
-                </div>*@
-        </div>
+                <div class="form-group">
+                    <p>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                    </p>
+                </div>
+            </form>
+        </section>
     </div>
 </div>
 
 @section Scripts {
+    <link rel="stylesheet" href="~/js/node_modules/@@fortawesome/fontawesome-free/css/fontawesome.min.css" />
     <partial name="_ValidationScriptsPartial" />
 }
