--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -69,7 +69,7 @@
             8.Budgetary Offer Date:
         </dt>
         <dd class="col-sm-12">
-            @Html.DisplayFor(model => model.Notesheet.BudgetOfferDate)
+            @Html.DisplayFor(model => model.BudgetOfferDate)
         </dd>
         <dt class="col-sm-12">
             9.Budgetary Offer Validity:
