--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -172,8 +172,8 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id" class="btn btn-info">Edit</a> |
+    <a asp-page="./Index"  class="btn btn-primary">Back to List</a>
 </div>
 @section Scripts{
     <style>
