--- a/src/WebApp/Pages/Notesheets/Index.cshtml
+++ b/src/WebApp/Pages/Notesheets/Index.cshtml
@@ -5,161 +5,202 @@
 
 
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table table-bordered table-hover display" id="notesheet_table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].ReferenceNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].PackageName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].ScopeOfWork)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].Technical_Specification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].CreatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].Created)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].LastModifiedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notesheet[0].LastModified)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Notesheet)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReferenceNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PackageName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Type)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ScopeOfWork)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Technical_Specification)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedBy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Created)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastModifiedBy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastModified)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-}
-    </tbody>
-</table>
+<div class="row justify-content-center align-items-center">
+    <div class="col col-md-12">
+        <h2>@ViewData["Title"]</h2>
+        <hr />
+        <p>
+            <a asp-page="Create" class="btn btn-info btn-sm">Create New</a>
+        </p>
+        <table class="table table-bordered table-hover display" id="notesheet_table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].ReferenceNo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].PackageName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Type)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Description)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].ScopeOfWork)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Technical_Specification)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].CreatedBy)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Created)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].LastModifiedBy)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].LastModified)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Notesheet)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ReferenceNo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PackageName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Type)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ScopeOfWork)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Technical_Specification)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedBy)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Created)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastModifiedBy)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastModified)
+                        </td>
+                        <td>
+                            <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm btn-block">Edit</a>
+                            <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-info btn-sm btn-block">Details</a>
+                            <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm btn-block">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].ReferenceNo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].PackageName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Type)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Description)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].ScopeOfWork)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Technical_Specification)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].CreatedBy)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].Created)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].LastModifiedBy)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Notesheet[0].LastModified)
+                    </th>
+                    <th></th>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+</div>
 
-@section Scripts{
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/fc-3.2.5/fh-3.1.4/r-2.2.2/datatables.min.css" />
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/fc-3.2.5/fh-3.1.4/r-2.2.2/datatables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
-    <script>
+        @section Scripts{
+            <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/fc-3.2.5/fh-3.1.4/r-2.2.2/datatables.min.css" />
+            <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/fc-3.2.5/fh-3.1.4/r-2.2.2/datatables.min.js"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
+            <script>
 
-        function strtrunc(str, max, add) {
-            add = add || '...';
-            return (typeof str === 'string' && str.length > max ? str.substring(0, max) + add : str);
-        };
+                function strtrunc(str, max, add) {
+                    add = add || '...';
+                    return (typeof str === 'string' && str.length > max ? str.substring(0, max) + add : str);
+                };
 
-        $(document).ready(function () {
-            // https://datatables.net/examples/api/multi_filter.html
-            // Setup - add a text input to each footer cell
-            $('#users_table tfoot th').each(function () {
-                //var title = $(this).text();
-                $(this).html('<input type="text" placeholder="Search" />');
-            });
+                $(document).ready(function () {
+                    // https://datatables.net/examples/api/multi_filter.html
+                    // Setup - add a text input to each footer cell
+                    $('#notesheet_table tfoot th').each(function () {
+                        //var title = $(this).text();
+                        $(this).html('<input type="text" placeholder="Search" />');
+                    });
 
-            var notesheet_table = $('#notesheet_table').DataTable({
-                fixedHeader: true,
-                "lengthMenu": [[10, 20, 50, 100, -1], [10, 20, 50, 100, "All"]],
-                "pageLength": 50,
-                dom: 'Bfrtip',
-                "order": [[0, "asc"]],
-                buttons: ['pageLength', 'copy', 'csv', 'excel', 'pdf', 'print'],
+                    var notesheet_table = $('#notesheet_table').DataTable({
+                        fixedHeader: true,
+                        "lengthMenu": [[10, 20, 50, 100, -1], [10, 20, 50, 100, "All"]],
+                        "pageLength": 50,
+                        dom: 'Bfrtip',
+                        "order": [[0, "asc"]],
+                        buttons: ['pageLength', 'copy', 'csv', 'excel', 'pdf', 'print'],
 
-                'columnDefs': [
-                    {
-                        'targets': [3, 4, 5],
-                        'render': function (data, type, full, meta) {
-                            if (type === 'display') {
-                                data = strtrunc(data, 20);
+                        'columnDefs': [
+                            {
+                                'targets': [3, 4, 5],
+                                'render': function (data, type, full, meta) {
+                                    if (type === 'display') {
+                                        data = strtrunc(data, 20);
+                                    }
+
+                                    return data;
+                                }
                             }
+                        ],
+                    });
 
-                            return data;
-                        }
-                    }
-                ],
-            });
+                    var r = $('#notesheet_table tfoot tr');
+                    r.find('th').each(function () {
+                        $(this).css('padding', '3px');
+                    });
 
-            var r = $('#users_table tfoot tr');
-            r.find('th').each(function () {
-                $(this).css('padding', '3px');
-            });
+                    $('#notesheet_table thead').append(r);
 
-            $('#users_table thead').append(r);
+                    // Apply the filter
+                    // https://www.jqueryscript.net/demo/DataTables-Jquery-Table-Plugin/examples/api/multi_filter.html
+                    $("#notesheet_table thead input").on('keyup change', function () {
+                        notesheet_table
+                            .column($(this).parent().index() + ':visible')
+                            .search(this.value)
+                            .draw();
+                    });
+                });
 
-            // Apply the filter
-            // https://www.jqueryscript.net/demo/DataTables-Jquery-Table-Plugin/examples/api/multi_filter.html
-            $("#notesheet_table thead input").on('keyup change', function () {
-                notesheet_table
-                    .column($(this).parent().index() + ':visible')
-                    .search(this.value)
-                    .draw();
-            });
-        });
-
-    </script>
-    <style>
-        thead input {
-            padding: 2px;
-            box-sizing: border-box;
-            font-size: small;
-            width: 100%
+            </script>
+            <style>
+                thead input {
+                    padding: 2px;
+                    box-sizing: border-box;
+                    font-size: small;
+                    width: 100%
+                }
+            </style>
         }
-    </style>
-}
