--- a/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -23,6 +23,6 @@
         </li>
     }
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-page="/Users/Details">My Details</a>
+        <a class="nav-link text-light" asp-page="/Users/Details">My Details</a>
     </li>
 }
