--- a/src/WebApp/Pages/Users/Create.cshtml
+++ b/src/WebApp/Pages/Users/Create.cshtml
@@ -67,7 +67,7 @@
             </div>
             <button type="submit" class="btn btn-success">Create User</button>
         </form>
-        <a asp-page="/Users/Index">Back to List</a>
+        <a asp-page="/Users/Index"  class="btn btn-primary">Back to List</a>
     </div>
 </div>
 
