--- a/src/WebApp/Pages/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Users/Edit.cshtml
@@ -68,7 +68,7 @@
             </div>
             <button type="submit" class="btn btn-success">Save Changes</button>
         </form>
-        <a asp-page="/Users/Index">Back to List</a>
+        <a asp-page="/Users/Index"  class="btn btn-primary">Back to List</a>
     </div>
 </div>
 
