--- a/src/WebApp/Pages/Users/Index.cshtml
+++ b/src/WebApp/Pages/Users/Index.cshtml
@@ -10,6 +10,9 @@
         <div class="col col-md-12">
             <h2>@ViewData["Title"]</h2>
             <hr />
+            <p>
+                <a asp-page="./Create" class="btn btn-primary">Create User</a>
+            </p>
             <table class="table table-bordered table-hover display" id="users_table">
                 <thead>
                     <tr>
@@ -39,9 +42,9 @@
                             <td>@user.Department</td>
                             <td>@Html.DisplayFor(modelItem => user.IsActive)</td>
                             <td>
-                                <a asp-page="./Details" asp-route-id="@user.UserId">Details</a> |
-                                <a asp-page="./Edit" asp-route-id="@user.UserId">Edit</a> |
-                                <a asp-page="./Delete" asp-route-id="@user.UserId">Delete</a>
+                                <a asp-page="./Details" asp-route-id="@user.UserId" class="btn btn-info btn-sm btn-block">Details</a> |
+                                <a asp-page="./Edit" asp-route-id="@user.UserId" class="btn btn-warning btn-sm btn-block">Edit</a> |
+                                <a asp-page="./Delete" asp-route-id="@user.UserId" class="btn btn-danger btn-sm btn-block">Delete</a>
                             </td>
                         </tr>
                     }
@@ -63,9 +66,6 @@
                 </tfoot>
             </table>
             <br />
-            <p>
-                <a asp-page="./Create">Create User</a>
-            </p>
         </div>
 
     </div>
