--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -36,7 +36,7 @@
                 <span asp-validation-for="Notesheet.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Notesheet.ScopeOfWork" class="control-label">Scope of Works</label>
+                <label asp-for="Notesheet.ScopeOfWork" class="control-label">Scope of Works for Supply/SITC/Works/AMC</label>
                 @*<input asp-for="Notesheet.ScopeOfWork" class="form-control" />*@
                 <textarea asp-for="Notesheet.ScopeOfWork" class="form-control" rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.ScopeOfWork" class="text-danger"></span>
